--- a/style.css
+++ b/style.css
@@ -24,9 +24,22 @@ body {
     background-color: lightgray;
 }
 .card{
-    border: solid 1px red;
+    margin: auto;
+    width: 40rem;
+
 }
 #create {
     display: flex;
     justify-content: right;
+    border: 5px solid red !important;
+
+}
+.login {
+    width: 240px;
+}
+#settings {
+    float: right;
+}
+.navbar {
+    margin: 10px;
 }
